--- a/app/index.html
+++ b/app/index.html
@@ -1,34 +1,27 @@
 <!DOCTYPE html>
-<!-- build:[ng-app]:e2e sn.example.e2e -->
-<html lang="en" ng-app="sn.example">
+<!-- build:[ng-app]:e2e sn.velocity.e2e -->
+<html lang="en" ng-app="sn.velocity">
 <!-- /build -->
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <meta name="fragment" content="!" />
-        <title>SOON_ AngularJS Template</title>
+        <title>SOON_ Velocity Directives</title>
         <!-- build:template
         <base href="/">
         /build -->
         <!-- build:remove -->
         <base href="/app/">
         <!-- /build -->
-        <!-- build:css css/all.min.css -->
-        <link rel="stylesheet" href="css/all.css"/>
-        <!-- /build -->
     </head>
     <body>
 
-        <ng-view></ng-view>
-
         <!-- build:js js/app.min.js -->
         <script src="components/angular/angular.js"></script>
-        <script src="components/angular-route/angular-route.js"></script>
 
-        <script src="js/soon-example/app.js"></script>
-        <script src="js/soon-example/config.js"></script>
-        <script src="js/soon-example/controllers/SearchCtrl.js"></script>
-        <script src="js/soon-example/controllers/ResultsCtrl.js"></script>
+        <script src="js/angular-velocity.js"></script>
+        <script src="js/directives/velocity.js"></script>
+        <script src="js/directives/velocity-group.js"></script>
         <!-- /build -->
         <!-- build:include:e2e ../tests/e2e/scripts.html --><!-- /build -->
 
